# fastapi-production-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  security.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  user.py
app/routers/: __init__.py  auth.py  health.py  users.py
app/schemas/: __init__.py  auth.py  common.py  user.py
app/services/: __init__.py  auth.py  user.py
tests/: conftest.py  test_auth.py  test_health.py
